# Coin-Detection

./: CMakeLists.txt  README.md  detector_factory.cpp  main.cpp
Coin-Detection/: CMakeLists.txt  README.md
apps/: main.cpp
include/: detector.hpp
sources/: detector_factory.cpp  hough.cpp  threshold.cpp
